# BranchHinting

./: .gitignore  BranchHinting.hpp  CMakeLists.txt  Doxyfile  README.md  runTests.sh
images/: BranchHinting.svgz  BranchHintingLogo.svgz
scripts/: test.sh
tests/: HintingDisabled.cpp  HintingEnabled.cpp
